design changes (WIP)

--- a/tetris/client/public/index.html
+++ b/tetris/client/public/index.html
@@ -1,4 +1,4 @@
-tetris/client/public/index.html -->
+<!--tetris/client/public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,7 +22,13 @@ tetris/client/public/index.html -->
         color: white;
         display: flex;
         justify-content: center;
-        padding-top: 2rem;
+        height: 100vh;
+        overflow: hidden;
+      }
+      
+      #root {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
